emoji_window/emoji_window.h


// Button click callback type (stdcall)
// 参数: button_id - 按钮ID, parent_hwnd - 父窗口句柄
typedef void (__stdcall *ButtonClickCallback)(int button_id, HWND parent_hwnd);


// Message box callback type (confirmed: 1=OK, 0=Cancel)
typedef void (__stdcall *MessageBoxCallback)(int confirmed);


// 复选框回调函数类型 (stdcall 调用约定)
typedef void (__stdcall *CheckBoxCallback)(HWND hCheckBox, BOOL checked);


// 列表框回调函数类型 (stdcall 调用约定)
typedef void (__stdcall *ListBoxCallback)(HWND hListBox, int index);


// 组合框回调函数类型 (stdcall 调用约定)
typedef void (__stdcall *ComboBoxCallback)(HWND hComboBox, int index);

    __declspec(dllexport) HWND __stdcall create_window_bytes(const unsigned char* title_bytes, int title_len, int x, int y, int width, int height);

    __declspec(dllexport) HWND __stdcall create_window_bytes_ex(const unsigned char* title_bytes, int title_len, int x, int y, int width, int height, UINT32 titlebar_color, UINT32 client_bg_color);


    __declspec(dllexport) int __stdcall create_emoji_button_bytes(
        HWND parent,
        const unsigned char* emoji_bytes,
        int emoji_len,
        const unsigned char* text_bytes,
        int text_len,
        int x, int y, int width, int height,
        UINT32 bg_color
    );


    __declspec(dllexport) void __stdcall set_button_click_callback(ButtonClickCallback callback);

    
    // ========== 按钮属性命令 ==========
    
    // 获取按钮文本 (UTF-8编码，两次调用模式)
    __declspec(dllexport) int __stdcall GetButtonText(int button_id, unsigned char* buffer, int buffer_size);

    
    // 设置按钮文本 (UTF-8编码)
    __declspec(dllexport) void __stdcall SetButtonText(int button_id, const unsigned char* text, int text_len);

    
    // 设置按钮Emoji (UTF-8编码)
    __declspec(dllexport) void __stdcall SetButtonEmoji(int button_id, const unsigned char* emoji, int emoji_len);

    
    // 获取按钮位置和大小
    __declspec(dllexport) int __stdcall GetButtonBounds(int button_id, int* x, int* y, int* width, int* height);

    
    // 设置按钮背景色 (ARGB格式)
    __declspec(dllexport) void __stdcall SetButtonBackgroundColor(int button_id, UINT32 color);

    
    // 获取按钮可视状态
    __declspec(dllexport) BOOL __stdcall GetButtonVisible(int button_id);

    
    // 显示/隐藏按钮
    __declspec(dllexport) void __stdcall ShowButton(int button_id, BOOL visible);

    
    // 获取按钮启用状态
    __declspec(dllexport) BOOL __stdcall GetButtonEnabled(int button_id);

    
    // ========== 窗口属性命令 ==========
    
    // 获取窗口标题 (UTF-8编码，两次调用模式)
    __declspec(dllexport) int __stdcall GetWindowTitle(HWND hwnd, unsigned char* buffer, int buffer_size);

    
    // 获取窗口位置和大小
    __declspec(dllexport) int __stdcall GetWindowBounds(HWND hwnd, int* x, int* y, int* width, int* height);

    
    // 获取窗口标题栏颜色 (RGB格式)
    __declspec(dllexport) UINT32 __stdcall GetWindowTitlebarColor(HWND hwnd);

    
    __declspec(dllexport) void __stdcall set_message_loop_main_window(HWND hwnd);

    __declspec(dllexport) int __stdcall run_message_loop();

    __declspec(dllexport) void __stdcall destroy_window(HWND hwnd);


    // ========== 编辑框功能 ==========

    // 创建编辑框（vertical_center 仅单行有效）
    __declspec(dllexport) HWND __stdcall CreateEditBox(
        HWND hParent,
        int x, int y, int width, int height,
        const unsigned char* text_bytes,
        int text_len,
        UINT32 fg_color,
        UINT32 bg_color,
        const unsigned char* font_name_bytes,
        int font_name_len,
        int font_size,
        BOOL bold,
        BOOL italic,
        BOOL underline,
        int alignment,  // 0=左, 1=中, 2=右
        BOOL multiline,
        BOOL readonly,
        BOOL password,
        BOOL has_border,
        BOOL vertical_center  // 文本垂直居中（仅单行有效）
    );


    // 获取编辑框字体信息（返回字体名字节数，-1=错误）
    __declspec(dllexport) int __stdcall GetEditBoxFont(
        HWND hEdit,
        unsigned char* font_name_buffer,
        int font_name_buffer_size,
        int* font_size,
        int* bold,
        int* italic,
        int* underline
    );


    // 获取编辑框颜色（返回0=成功，-1=错误）
    __declspec(dllexport) int __stdcall GetEditBoxColor(
        HWND hEdit,
        UINT32* fg_color,
        UINT32* bg_color
    );


    // 获取编辑框位置和大小（返回0=成功，-1=错误）
    __declspec(dllexport) int __stdcall GetEditBoxBounds(
        HWND hEdit,
        int* x,
        int* y,
        int* width,
        int* height
    );


    // ========== 标签功能 ==========

    // 创建标签
    __declspec(dllexport) HWND __stdcall CreateLabel(
        HWND hParent,
        int x, int y, int width, int height,
        const unsigned char* text_bytes,
        int text_len,
        UINT32 fg_color,
        UINT32 bg_color,
        const unsigned char* font_name_bytes,
        int font_name_len,
        int font_size,
        BOOL bold,
        BOOL italic,
        BOOL underline,
        int alignment,  // 0=左, 1=中, 2=右
        BOOL word_wrap  // 是否换行显示
    );


    // 获取标签文本
    __declspec(dllexport) int __stdcall GetLabelText(
        HWND hLabel,
        unsigned char* buffer,
        int buffer_size
    );


    // 设置标签文本
    __declspec(dllexport) void __stdcall SetLabelText(
        HWND hLabel,
        const unsigned char* text_bytes,
        int text_len
    );


    // 获取标签字体信息
    __declspec(dllexport) int __stdcall GetLabelFont(
        HWND hLabel,
        unsigned char* font_name_buffer,
        int font_name_buffer_size,
        int* font_size,
        int* bold,
        int* italic,
        int* underline
    );


    // 获取标签颜色
    __declspec(dllexport) int __stdcall GetLabelColor(
        HWND hLabel,
        UINT32* fg_color,
        UINT32* bg_color
    );


    // 获取标签位置和大小
    __declspec(dllexport) int __stdcall GetLabelBounds(
        HWND hLabel,
        int* x,
        int* y,
        int* width,
        int* height
    );


    // 获取标签对齐方式 (0=左, 1=中, 2=右)
    __declspec(dllexport) int __stdcall GetLabelAlignment(
        HWND hLabel
    );


    // ========== 复选框功能 ==========

    // 创建复选框
    __declspec(dllexport) HWND __stdcall CreateCheckBox(
        HWND hParent,
        int x, int y, int width, int height,
        const unsigned char* text_bytes,
        int text_len,
        BOOL checked,
        UINT32 fg_color,
        UINT32 bg_color,
        const unsigned char* font_name_bytes,
        int font_name_len,
        int font_size,
        BOOL bold,
        BOOL italic,
        BOOL underline
    );


    // 设置复选框回调
    __declspec(dllexport) void __stdcall SetCheckBoxCallback(
        HWND hCheckBox,
        CheckBoxCallback callback
    );


    // 获取复选框文本（UTF-8，两次调用模式）
    __declspec(dllexport) int __stdcall GetCheckBoxText(
        HWND hCheckBox,
        unsigned char* buffer,
        int buffer_size
    );


    // ========== 单选按钮功能 ==========

    // 创建单选按钮
    __declspec(dllexport) HWND __stdcall CreateRadioButton(
        HWND hParent,
        int x, int y, int width, int height,
        const unsigned char* text_bytes,
        int text_len,
        int group_id,
        BOOL checked,
        UINT32 fg_color,
        UINT32 bg_color,
        const unsigned char* font_name_bytes,
        int font_name_len,
        int font_size,
        BOOL bold,
        BOOL italic,
        BOOL underline
    );


    // 获取单选按钮文本（UTF-8，两次调用模式）
    __declspec(dllexport) int __stdcall GetRadioButtonText(
        HWND hRadioButton,
        unsigned char* buffer,
        int buffer_size
    );


    // 获取组合框文本
    __declspec(dllexport) int __stdcall GetComboBoxText(
        HWND hComboBox,
        unsigned char* buffer,
        int buffer_size
    );